--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>kafka-map</name>
     <description>a simple kafka manager</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -62,7 +62,7 @@
             <scope>compile</scope>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>3.0.3</version>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <scope>compile</scope>
@@ -88,8 +88,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
